feat: add logs and support to hub-metrics
